Tours index layout bug fix

--- a/mit_civic/citi_digits/static/css/main.css
+++ b/mit_civic/citi_digits/static/css/main.css
@@ -50,7 +50,7 @@ body {
 width: 100%;
 }}
 
-@media (min-width: 1200px){
+@media (max-width: 2000px){ /*(min-width: 1200px){*/
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
 width: 100%;
 }}
